--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "superstatic": "^4.0.3",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
   }
